feat(i18n): 批次 5~8 语言接口 / 导出导入 / 带参消息 / 日志英文化
后端 i18n 全部完成。真实服务实测（空库 gentry_v8，12 个迁移全过）：
  DELETE /roles/999999999  en-US -> "Role not found"   zh-CN -> 「角色不存在」
  POST   /users {}         en-US -> "Username is required; Nickname is required..."
  GET    /auth/user-info   14 个导航节点全部带 i18nKey，零缺失
  登录带 Accept-Language: en-US 时验证码错误也返回英文

批次 5 语言偏好接口
- PUT /api/v1/users/me/language：不加 @SaCheckPermission（改自己的偏好不该要权限点），
  不走 /users/{id}（避免管理员误改他人语言）
- 白名单校验在 Service 查 I18nProperties，DTO 的 @Pattern 只校验格式 ——
  注解常量读不到配置，写两份必然漂移
- 同步 Sa-Token Session：不同步的话语言落库了但导出/定时通知仍按旧语言走，
  直到重新登录，而那两个场景正是选用户级偏好的全部理由
- GET /api/v1/i18n/locales：label 用语言自称不翻译（英文用户看到「中文」反而不认识）

批次 6 导出/导入（内部不可拆）
- @ExcelProperty 从文案改为 index：注解常量运行时翻不了，表头改在 Service 现场构建
- 导入同批改列序匹配 + headRowNumber(1)。只做导出会让英文导出的文件导回来
  列全部匹配不上、静默得到全 null。加用例「英文导出的Excel能原样导回来」锁住
- 修批次 2 引入的回归：BizException.getMessage() 现在返回 key，
  导入错误项直接给用户会露 error.xxx（已改为按请求 locale 翻译）；
  登录日志改用 getFallbackMessage() 保持中文（与「日志不参与 i18n」一致）

批次 7 带参消息（通知模板不存在）
- 实测更正：脚手架没有内置通知模板。send() 的 title/content 由管理员在发布页手填，
  属 C 类不翻译；也没有定时通知任务。原设计假设有 notify.*/sms.* 模板，是错的。
  本版本交付能力（I18nUtil 显式 locale + BizException.of），前缀留给派生项目
- error.account.locked 带 {0}：原来抛无参的「请稍后再试」，用户看不到还要等几分钟
- BizException.of 写成静态工厂而非构造器，因为 (ErrorCode, Object...) 会与
  (ErrorCode, String) 在传单个字符串时重载歧义

批次 8 日志英文化
- 34 处 log.xxx() 中文改英文固定文本（原口径 36 含注释行）
- 日志读者是运维：若参与 i18n，grep 日志得先知道当时哪个 locale 生效
- 新增防线「日志语句不得包含中文」

修掉批次 5 自己的一处缺陷：I18nController 的 Javadoc 声称未登录可访问，
但 SaTokenConfig 的登录拦截器覆盖 /api/**，实测返回 401 + 30001。
已加进 excludePathPatterns 并补用例。

新增约束测试：
- ExportI18nConstraintTest（放 business 而非 core —— core 不依赖 business，
  放 core 只能 Class.forName + 捕获异常跳过，那是永不执行的假测试）
  HEAD_KEYS 长度与 @ExcelProperty(index) 列数一致、表头 key 有译文、
  不得残留中文 @ExcelProperty 文案、导入必须按 index 绑定
- 日志不得含中文

口径修正（非实现遗漏）：校验注解 131→120 处/64 去重；导出表头 55→17 条；
日志 36→34 处；通知模板「有」→不存在。

验证：全量 316 → 331 全绿（core 122 / business 65 / monitor 26 / start 118）